--- a/produtos.css
+++ b/produtos.css
@@ -30,7 +30,7 @@ nav a {
 
 nav a:hover {
     color: red#;
-    text-decoration: underline;
+    text-decoration:underline;
 }
 
 .produtos {
@@ -80,7 +80,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background: url("bg.jpg");
+    background: url("img/bg.jpg");
     padding: 40px 0;
 }
 
