--- a/produtos.css
+++ b/produtos.css
@@ -29,7 +29,7 @@ nav a {
 }
 
 nav a:hover {
-    color: red#;
+    color: red;
     text-decoration:underline;
 }
 
@@ -52,7 +52,7 @@ nav a:hover {
 }
 
 .produtos li:hover {
-    border-color: red#;
+    border-color: red;
 }
 
 .produtos li:active {
